...
    <string name="success">Success</string>
    <string name="didn_t_receive_a_code_resend">Didn\'t receive a code? Resend (%1$d)</string>
    <string name="logo">Logo</string>
    <string name="enter_the_password_associated_with_your_account">Enter the password associated with your account</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="continue_text">Continue</string>
    <string name="use_another_method">Use another method</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_enter_the_code_sent_to_your_email_address">First, enter the code sent to your email address</string>
    <string name="first_enter_the_code_sent_to_your_phone">First, enter the code sent to your phone</string>
    <string name="to_continue_please_enter_the_verification_code_generated_by_your_authenticator_app">To continue, please enter the verification code generated by your authenticator app</string>
    <string name="to_continue_to">To continue to %1$s</string>
...
    <string name="current_password">Current password</string>
    <string name="it_is_recommended_to_sign_out">It is recommended to sign out of all other devices which may have used your old password.</string>
    <string name="rename_passkey">Rename passkey</string>
    <string name="you_can_change_the_passkey_name">You can change the passkey name to make it easier to find</string>
    <string name="name_of_passkey">Name of passkey</string>
    <string name="choose_how_you_d_like_to_receive_your_two_step_verification_code">Choose how you’d like to receive your two-step verification code.</string>
    <string name="authenticator_application">Authenticator application</string>
    <string name="sms_code">SMS code</string>
    <string name="add_phone_number">Add phone number</string>
    <string name="there_are_no_available_phone_numbers">There are no available phone numbers to register for SMS code two-step verification, please add a new one.</string>
    <string name="a_text_message_containing_a_verification_code_will_be_sent">A text message containing a verification code will be sent to this phone number. Message and data rates may apply.</string>
    <string name="add_backup_code_verification">Add backup code verification</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="saved_to_downloads">Saved to Downloads: %1$s</string>
    <string name="failed_to_save_file">Failed to save file: %1$s</string>
    <string name="close">Close</string>
    <string name="show_password" tools:ignore="MissingTranslation">Show password</string>
    <string name="hide_password" tools:ignore="MissingTranslation">Hide password</string>
    <string name="type_delete_to_continue">Type \"DELETE\" to continue</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account? This action is permanent and irreversible.</string>
    <string name="email_addresses">Email Addresses</string>
    <string name="mfa_reserved">MFA reserved</string>
...
    <string name="secured_by">Secured by</string>
    <string name="development_mode" tools:ignore="MissingTranslation">Development mode</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and_connector">and</string>
    <string name="set_up_two_step_verification" tools:ignore="MissingTranslation">Set up two-step verification</string>
    <string name="choose_which_method_you_prefer_to_protect_your_account_with_an_extra_layer_of_security" tools:ignore="MissingTranslation">Choose which method you prefer to protect your account with an extra layer of security.</string>
    <string name="continue_with_biometrics" tools:ignore="MissingTranslation">Continue with biometrics</string>
    <string name="sign_in_with_biometrics" tools:ignore="MissingTranslation">Sign in with biometrics</string>
    <string name="biometric_sign_in" tools:ignore="MissingTranslation">Biometric sign-in</string>
    <string name="enable_biometric_sign_in" tools:ignore="MissingTranslation">Enable biometric sign-in</string>
    <string name="enable_biometric_sign_in_for_faster_access_to" tools:ignore="MissingTranslation">Enable biometric sign-in for faster access to %1$s</string>
...
